libreoffice (1:6.4.2-2) UNRELEASED; urgency=medium

  * debian/control.in:
    - make libreoffice-common Breaks: libreoffice-core (<< 1:6.4.2~rc1)
      (closes: #954323) 

 -- Rene Engelhard <rene@debian.org>  Fri, 20 Mar 2020 16:02:43 +0100

libreoffice (1:6.4.2-1) unstable; urgency=medium

  * LibreOffice 6.4.2 final (identical to rc2)

  * debian/patches/gengal-message-core.diff: print message and exit with
    an error if -core-nogui (and not -core) is installed. See #952347

  * merge from Ubuntu:
    - Add armhf to OOO_NOGUI_ARCHS

  * upload to unstable 

 -- Rene Engelhard <rene@debian.org>  Thu, 19 Mar 2020 16:01:22 +0100

libreoffice (1:6.4.2~rc2-1) experimental; urgency=medium

  * New upstream release candidate

  * debian/tests/control:
    - make smoketest depend on -writer and -math (not their -nogui variants) 

 -- Rene Engelhard <rene@debian.org>  Wed, 11 Mar 2020 16:21:48 +0000

libreoffice (1:6.4.2~rc1-2) experimental; urgency=medium

  * debian/patches/Revert-tdf130839-Corrects-second-level-left-margin-i.patch:
    remove again.

  * debian/tests/control: add missing python3-uno to uitest-cui and missing
    libreoffice-l10n-{he,ja} to uicheck-uitest tests 
  * debian/rules:
    - explicitely build with libboost1.71-dev (and therefore use internal
      mdds for now) and set BOOST_MINVER= (>= 1.68)
  * debian/source/include-binaries:
    - include tarballs/mdds-1.5.0.tar.bz2

 -- Rene Engelhard <rene@debian.org>  Sat, 07 Mar 2020 22:53:34 +0100

libreoffice (1:6.4.2~rc1-1) experimental; urgency=medium

  * New upstream release candidate

  * debian/patches/disable-some-sc-tests-with-internal-cppunit.diff:
    cleanup - remove; affected only internal cppunit and stable(-backports)
    already builds with system one
  * debian/patches/Revert-tdf130839-Corrects-second-level-left-margin-i.patch:
    temporarily revert upstream patch until we either have boost >= 1.68 as
    default or it can be built with boost < 1.68