@@ -552,8 +552,8 @@ Suggests: fonts-crosextra-caladea,
           libreoffice-base,
           ${java-common-depends},
           ${java-runtime-depends}
-Replaces: libreoffice-common (<< 1:5.4.1), libreoffice-writer
-Breaks: libreoffice-common (<< 1:5.4.1)
+Replaces: libreoffice-common (<< 1:6.4.2~rc1~), libreoffice-writer
+Breaks: libreoffice-common (<< 1:6.4.2~rc1~)
 Conflicts: libreoffice-writer
 Description: office productivity suite -- word processor (no GUI variant)
  LibreOffice is a full-featured office productivity suite that provides
@@ -584,8 +584,8 @@ Depends: libreoffice-base-core (= ${binary:Version}) [!hppa !mips64 !s390 !sparc
          ${lpsolve-dep},
          ${misc:Depends},
          ${shlibs:Depends}
-Replaces: libreoffice-calc, libreoffice-common (<< 1:5.4.1)
-Breaks: libreoffice-common (<< 1:5.4.1)
+Replaces: libreoffice-calc, libreoffice-common (<< 1:6.4.2~rc1~)
+Breaks: libreoffice-common (<< 1:6.4.2~rc1~)
 Conflicts: libreoffice-calc
 Description: office productivity suite -- spreadsheet (no GUI variant)
  LibreOffice is a full-featured office productivity suite that provides
@@ -618,9 +618,9 @@ Depends: libreoffice-core (= ${binary:Version}) | libreoffice-core-nogui (= ${bi
          libreoffice-draw (= ${binary:Version}),
          ${misc:Depends},
          ${shlibs:Depends}
-Replaces: libreoffice-common (<< 1:5.4.1), libreoffice-impress
+Replaces: libreoffice-common (<< 1:6.4.2~rc1~), libreoffice-impress
 Conflicts: libreoffice-impress, libreoffice-ogltrans (<< 1:6.1.4-2~)
-Breaks: libreoffice-common (<< 1:5.4.1)
+Breaks: libreoffice-common (<< 1:6.4.2~rc1~)
 Suggests: bluez
 Description: office productivity suite -- presentation (no GUI variant)
  LibreOffice is a full-featured office productivity suite that provides
@@ -650,10 +650,10 @@ Architecture: amd64 i386 arm64 armhf s390x ppc64 ppc64el
 Depends: libreoffice-core (= ${binary:Version}) | libreoffice-core-nogui (= ${binary:Version}),
          ${misc:Depends},
          ${shlibs:Depends}
-Replaces: libreoffice-common (<< 1:5.4.1),
+Replaces: libreoffice-common (<< 1:6.4.2~rc1~),
           libreoffice-draw,
           libreoffice-impress (<< 1:5.2.0-2)
-Breaks: libreoffice-common (<< 1:5.4.1), libreoffice-impress (<< 1:5.2.0-2)
+Breaks: libreoffice-common (<< 1:6.4.2~rc1~), libreoffice-impress (<< 1:5.2.0-2)
 Conflicts: libreoffice-draw
 Description: office productivity suite -- drawing (no GUI variant)
  LibreOffice is a full-featured office productivity suite that provides
@@ -736,7 +736,8 @@ Depends: libreoffice-base-core (= ${binary:Version}),
          ${shlibs:Depends}
 Suggests: libreoffice-report-builder, python3-uno, unixodbc
 Recommends: libreoffice-writer, ${java-common-depends}, ${java-runtime-depends}
-Replaces: libreoffice-base, libreoffice-common (<< 1:4.3.0~beta1)
+Replaces: libreoffice-base, libreoffice-common (<< 1:6.4.2~rc1~)
+Breaks: libreoffice-common (<< 1:6.4.2~rc1~)
 Conflicts: libreoffice-base
 Description: office productivity suite -- database (no GUI variant)
  LibreOffice is a full-featured office productivity suite that provides
