@@ -331,8 +331,8 @@ Suggests: fonts-crosextra-caladea,
           libreoffice-base,
           ${java-common-depends},
           ${java-runtime-depends}
-Replaces: libreoffice-common (<< 1:5.4.1), libreoffice-writer
-Breaks: libreoffice-common (<< 1:5.4.1)
+Replaces: libreoffice-common (<< 1:6.4.2~rc1~), libreoffice-writer
+Breaks: libreoffice-common (<< 1:6.4.2~rc1~)
 Conflicts: libreoffice-writer
 Description: office productivity suite -- word processor (no GUI variant)
  LibreOffice is a full-featured office productivity suite that provides
@@ -363,8 +363,8 @@ Depends: libreoffice-base-core (= ${binary:Version})%OOO_NO_BASE_ARCHS%,
          ${lpsolve-dep},
          ${misc:Depends},
          ${shlibs:Depends}
-Replaces: libreoffice-common (<< 1:5.4.1), libreoffice-calc
-Breaks: libreoffice-common (<< 1:5.4.1)
+Replaces: libreoffice-common (<< 1:6.4.2~rc1~), libreoffice-calc
+Breaks: libreoffice-common (<< 1:6.4.2~rc1~)
 Conflicts: libreoffice-calc
 Description: office productivity suite -- spreadsheet (no GUI variant)
  LibreOffice is a full-featured office productivity suite that provides
@@ -395,9 +395,9 @@ Depends: libreoffice-core (= ${binary:Version}) | libreoffice-core-nogui (= ${bi
          libreoffice-draw (= ${binary:Version}),
          ${misc:Depends},
          ${shlibs:Depends}
-Replaces: libreoffice-common (<< 1:5.4.1), libreoffice-impress
+Replaces: libreoffice-common (<< 1:6.4.2~rc1~), libreoffice-impress
 Conflicts: libreoffice-ogltrans (<< 1:6.1.4-2~), libreoffice-impress
-Breaks: libreoffice-common (<< 1:5.4.1)
+Breaks: libreoffice-common (<< 1:6.4.2~rc1~)
 Description: office productivity suite -- presentation (no GUI variant)
  LibreOffice is a full-featured office productivity suite that provides
  a near drop-in replacement for Microsoft(R) Office.
@@ -422,8 +422,8 @@ Architecture: %OOO_NOGUI_ARCHS%
 Depends: libreoffice-core (= ${binary:Version}) | libreoffice-core-nogui (= ${binary:Version}),
          ${misc:Depends},
          ${shlibs:Depends}
-Replaces: libreoffice-impress (<< 1:5.2.0-2), libreoffice-common (<< 1:5.4.1), libreoffice-draw
-Breaks: libreoffice-impress (<< 1:5.2.0-2), libreoffice-common (<< 1:5.4.1)
+Replaces: libreoffice-impress (<< 1:5.2.0-2), libreoffice-common (<< 1:6.4.2~rc1~), libreoffice-draw
+Breaks: libreoffice-impress (<< 1:5.2.0-2), libreoffice-common (<< 1:6.4.2~rc1~)
 Conflicts: libreoffice-draw
 Description: office productivity suite -- drawing (no GUI variant)
  LibreOffice is a full-featured office productivity suite that provides
@@ -510,7 +510,8 @@ Suggests: libreoffice-report-builder,
           unixodbc,
           python3-uno
 Recommends: libreoffice-writer, ${java-common-depends}, ${java-runtime-depends}
-Replaces: libreoffice-common (<< 1:4.3.0~beta1), libreoffice-base
+Replaces: libreoffice-common (<< 1:6.4.2~rc1~), libreoffice-base
+Breaks: libreoffice-common (<< 1:6.4.2~rc1~)
 Conflicts: libreoffice-base
 Description: office productivity suite -- database (no GUI variant)
  LibreOffice is a full-featured office productivity suite that provides
