@@ -3,6 +3,8 @@ libreoffice (1:6.4.2-2) UNRELEASED; urgency=medium
   * debian/control.in:
     - make libreoffice-common Breaks: libreoffice-core (<< 1:6.4.2~rc1)
       (closes: #954323) 
+    - also add Breaks/Replaces libreoffice-common (<< 1:6.4.2~rc1~) to
+      -nogui (for now)
 
  -- Rene Engelhard <rene@debian.org>  Fri, 20 Mar 2020 16:02:43 +0100
 
